Migration against Eclipse 2021-12 (4.22.0) - V01
Signed-off-by: Philippe Krief <philippe.krief@eclipse-foundation.org>